# LLMs

./: README.md  pyproject.toml
news_summarizer/: README.md  pyproject.toml
news_summarizer/src/: fetch_and_parse.py  news_summarizer.py
notebooks/: LangChain101.ipynb
