[tool.poetry]
name = "news-summarizer"
version = "0.1.0"
description = ""
authors = ["Amrita Veerabaghu <amrita.nitt95@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<=3.13"
langchain = "0.0.208"
deeplake = "^3.8.13"
openai = "^1.6.1"
tiktoken = "^0.5.2"
newspaper3k = "^0.2.8"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
